Make string reading Java 8 compliant